--- a/tools/CMakeLists.txt
+++ b/tools/CMakeLists.txt
@@ -1,4 +1,4 @@
-#################################################################################
+################################################################################
 #
 # GEOS tools (geos-config) build configuration for CMake build system
 #
@@ -9,13 +9,15 @@
 # by the Free Software Foundation.
 # See the COPYING file for more information.
 #
-#################################################################################
+################################################################################
 
 if(UNIX OR MINGW)
 
-  if(APPLE AND GEOS_ENABLE_MACOSX_FRAMEWORK AND GEOS_ENABLE_MACOSX_FRAMEWORK_UNIXCOMPAT)
+  if(APPLE AND GEOS_ENABLE_MACOSX_FRAMEWORK
+      AND GEOS_ENABLE_MACOSX_FRAMEWORK_UNIXCOMPAT)
     set(installdest GEOS.framework/Versions/${VERSION_MAJOR}/unix/bin)
-    set(prefix ${CMAKE_INSTALL_PREFIX}/GEOS.framework/Versions/${VERSION_MAJOR}/unix)
+    set(prefix
+      ${CMAKE_INSTALL_PREFIX}/GEOS.framework/Versions/${VERSION_MAJOR}/unix)
   elseif(APPLE AND GEOS_ENABLE_MACOSX_FRAMEWORK)
     # just a dummy so installdest not set
     # want geos-config only for Mac unix build or framework+unixcompat
@@ -28,14 +30,15 @@ if(UNIX OR MINGW)
   set(libdir ${prefix}/lib)
 
   if(installdest)
-    configure_file(${CMAKE_CURRENT_SOURCE_DIR}/geos-config.in
-                   ${CMAKE_CURRENT_BINARY_DIR}/geos-config @ONLY)
+    configure_file(
+      ${CMAKE_CURRENT_SOURCE_DIR}/geos-config.in
+      ${CMAKE_CURRENT_BINARY_DIR}/geos-config @ONLY)
 
     install(FILES ${CMAKE_CURRENT_BINARY_DIR}/geos-config
       DESTINATION ${installdest}
-      PERMISSIONS
-      OWNER_READ OWNER_EXECUTE GROUP_READ GROUP_EXECUTE WORLD_READ WORLD_EXECUTE)
-endif()
+      PERMISSIONS OWNER_READ OWNER_EXECUTE
+        GROUP_READ GROUP_EXECUTE WORLD_READ WORLD_EXECUTE)
+  endif()
 
 endif()
 add_subdirectory(astyle)
