IndexedFacetDistance withinDistance JTS 82459582ff4b410aadae3b0d143aa57528469493 https://github.com/locationtech/jts/pull/387

--- a/src/index/strtree/Makefile.am
+++ b/src/index/strtree/Makefile.am
@@ -1,18 +1,19 @@
 #
-# This file is part of project GEOS (http://trac.osgeo.org/geos/) 
+# This file is part of project GEOS (http://trac.osgeo.org/geos/)
 #
 noinst_LTLIBRARIES = libindexstrtree.la
 
-AM_CPPFLAGS = -I$(top_srcdir)/include 
+AM_CPPFLAGS = -I$(top_srcdir)/include
 
 libindexstrtree_la_SOURCES = \
     AbstractNode.cpp \
     AbstractSTRtree.cpp \
     BoundablePair.cpp \
+    EnvelopeUtil.cpp \
     GeometryItemDistance.cpp \
     Interval.cpp \
     ItemBoundable.cpp \
     SIRtree.cpp \
     STRtree.cpp
 
-libindexstrtree_la_LIBADD = 
+libindexstrtree_la_LIBADD =
