--- a/.travis.yml
+++ b/.travis.yml
@@ -6,7 +6,7 @@
 # by the Free Software Foundation.
 # See the COPYING file for more information.
 #
-dist: trusty
+dist: xenial
 sudo: false
 
 language: cpp
