--- a/tests/bigtest/CMakeLists.txt
+++ b/tests/bigtest/CMakeLists.txt
@@ -12,9 +12,7 @@ add_executable(test_bug234 bug234.cpp)
 target_link_libraries(test_bug234 PRIVATE geos)
 add_test(NAME test_bug234 COMMAND test_bug234)
 
-add_executable(test_sweep_line_speed)
-target_sources(test_sweep_line_speed
-  PRIVATE
+add_executable(test_sweep_line_speed
     TestSweepLineSpeed.cpp
     GeometryTestFactory.cpp)
 target_link_libraries(test_sweep_line_speed PRIVATE geos)
