Add HoleAssigner to automake files

--- a/src/operation/polygonize/Makefile.am
+++ b/src/operation/polygonize/Makefile.am
@@ -12,6 +12,7 @@ liboppolygonize_la_SOURCES = \
     PolygonizeEdge.cpp \
     PolygonizeGraph.cpp \
     Polygonizer.cpp \
+    HoleAssigner.cpp \
     BuildArea.cpp \
     EdgeRing.cpp 
 
