Pull removeRepeatedPoints out of CoordinateSequence
This refactoring supports the goal of a slimmed-down CoordinateSequence
interface against which it will be easier to develop alternative
implementations.

--- a/include/geos/operation/valid/Makefile.am
+++ b/include/geos/operation/valid/Makefile.am
@@ -13,6 +13,7 @@ geos_HEADERS = \
     IsValidOp.h                 \
     MakeValid.h                 \
     QuadtreeNestedRingTester.h  \
+    RepeatedPointRemover.h      \
     RepeatedPointTester.h       \
     SimpleNestedRingTester.h    \
     SweeplineNestedRingTester.h \
