--- a/tests/bigtest/Makefile.am
+++ b/tests/bigtest/Makefile.am
@@ -5,17 +5,13 @@ prefix=@prefix@
 top_srcdir=@top_srcdir@
 top_builddir=@top_builddir@
 
-check_PROGRAMS = bug234
-check_PROGRAMS += TestSweepLineSpeed
+check_PROGRAMS = TestSweepLineSpeed
 
 LIBS = $(top_builddir)/src/libgeos.la
 # -lmpatrol -lbfd -lintl -liberty -limagehlp
 
 TestSweepLineSpeed_SOURCES = TestSweepLineSpeed.cpp GeometryTestFactory.cpp bigtest.h
 TestSweepLineSpeed_LDADD = $(LIBS)
-
-bug234_SOURCES = bug234.cpp
-bug234_LDADD = $(LIBS)
 
 AM_CPPFLAGS = -I$(top_srcdir)/include
 
