[CMake] Exclude perf tests from make check

--- a/tests/CMakeLists.txt
+++ b/tests/CMakeLists.txt
@@ -8,7 +8,8 @@
 # by the Free Software Foundation.
 # See the COPYING file for more information.
 ################################################################################
-add_custom_target(check COMMAND ctest)
+add_custom_target(check COMMAND ctest --exclude-regex perf
+        DEPENDS )
 
 add_subdirectory(unit)
 add_subdirectory(xmltester)
