First step to fixing geos-config, generate from separate input files (cmake and in) to avoid crosstalk References #971

--- a/tools/CMakeLists.txt
+++ b/tools/CMakeLists.txt
@@ -12,7 +12,7 @@
 #################################################################################
 
 
-configure_file(${CMAKE_CURRENT_SOURCE_DIR}/geos-config.in
+configure_file(${CMAKE_CURRENT_SOURCE_DIR}/geos-config.cmake
                ${CMAKE_CURRENT_BINARY_DIR}/geos-config)
 
 
