Automatically omit the build directory from the package

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -289,6 +289,7 @@ set(CPACK_SOURCE_IGNORE_FILES
   "\\\\.deps"
   "/debian/"
   "/php/"
+  ${PROJECT_BINARY_DIR}
   )
 
 # message(STATUS "GEOS: CPACK_SOURCE_PACKAGE_FILE_NAME: ${CPACK_SOURCE_PACKAGE_FILE_NAME}")
