--- a/capi/geos_c.h.in
+++ b/capi/geos_c.h.in
@@ -67,6 +67,10 @@ extern "C" {
 #define GEOS_JTS_PORT "@JTS_PORT@"
 #endif
 
+#ifndef GEOS_REVISION
+#define GEOS_REVISION @GIT_COMMIT_HASH@
+#endif
+
 #define GEOS_CAPI_VERSION_MAJOR @CAPI_VERSION_MAJOR@
 #define GEOS_CAPI_VERSION_MINOR @CAPI_VERSION_MINOR@
 #define GEOS_CAPI_VERSION_PATCH @CAPI_VERSION_PATCH@
@@ -74,6 +78,7 @@ extern "C" {
 
 #define GEOS_CAPI_FIRST_INTERFACE GEOS_CAPI_VERSION_MAJOR
 #define GEOS_CAPI_LAST_INTERFACE (GEOS_CAPI_VERSION_MAJOR+GEOS_CAPI_VERSION_MINOR)
+
 
 /************************************************************************
  *
