--- a/capi/geos_c.h.in
+++ b/capi/geos_c.h.in
@@ -68,7 +68,7 @@ extern "C" {
 #endif
 
 #ifndef GEOS_REVISION
-#define GEOS_REVISION @GIT_COMMIT_HASH@
+#define GEOS_REVISION "@GIT_COMMIT_HASH@"
 #endif
 
 #define GEOS_CAPI_VERSION_MAJOR @CAPI_VERSION_MAJOR@
